# campus

./: .editorconfig  .gitignore  Cargo.toml
.github/workflows/: base.yml  lib.yml  passport-api.yml  passport-jwt.yml  passport-web.yml  passport.yml
crates/passport/: Cargo.toml  Dockerfile  build.rs
crates/passport-api/: Cargo.toml  Dockerfile
crates/passport-api/src/: auth.rs  main.rs  metrics.rs
crates/passport-ctl/: Cargo.toml  build.rs
crates/passport-ctl/src/: main.rs
crates/passport-jwt/: Cargo.toml
crates/passport-jwt/src/: decoders.rs  encoders.rs  lib.rs  tokens.rs
crates/passport-web/: Cargo.toml  Dockerfile
crates/passport-web/conf/: nginx.conf
crates/passport-web/src/: main.rs
crates/passport/src/: main.rs
crates/protocols/: Cargo.toml  build.rs
crates/protocols/proto/: passport.proto
crates/protocols/src/: lib.rs
proto/: passport.proto
