[workspace]
resolver = "2"
members = ["crates/passport", "crates/passport-jwt", "crates/passport-web"]

[workspace.package]
name = "campus"
description = "Pet projects playground"
publish = false
edition = "2024"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
rand = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.15.1", features = ["v4"] }
rstest = "0.25.0"
