[package]
name = "passport-api"
description = "User authentication and authorization service API"
version = "0.1.0"

publish.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "passport"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.14.0", features = ["serde", "v4"] }

http = "1.2.0"
axum = "0.8.1"

metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }

async-stream = "0.3.6"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"

tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "serde_json",
] }

tonic = "0.12.3"
tonic-reflection = "0.12.3"
prost = "0.13.5"
prost-types = "0.13.5"

[build-dependencies]
tonic-build = "0.12.3"
