[package]
name = "passport-api"
description = "User authentication and authorization service API"
version = "0.1.0"

publish.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "passport"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }

tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
    "serde_json",
] }

serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }

axum.workspace = true
http.workspace = true

metrics = { workspace = true, default-features = false }
metrics-exporter-prometheus = { workspace = true, default-features = false }

async-stream = "0.3.6"

tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }

tonic.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
prost-types.workspace = true

protocols.workspace = true
