[package]
version = "0.1.0"
name = "passport-jwt"
description = "JWT parsing library"
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jsonwebtoken = "9.3.1"
chrono.workspace = true
rand.workspace = true
uuid.workspace = true
serde.workspace = true

[dev-dependencies]
pem = "3.0.5"
rsa = { version = "0.9.7", features = ["pem"] }
ring.workspace = true
rstest.workspace = true
