[package]
version = "0.1.0"
name = "passport-jwt"
description = "JWT parsing library"
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
pem.workspace = true
rsa = { workspace = true, features = ["pem"] }
ring.workspace = true
rstest.workspace = true
