[package]
name = "passport-web"
description = "Passport web app"
version = "0.1.0"

publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
